[tool.poetry]
name = "iblncr"
version = "0.1.0"
description = "A Python package to interact with Interactive Brokers TWS API using ib-async"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/iblncr"

[tool.poetry.dependencies]
python = "^3.11"
ib_async = "*"
pandas = "*"
pyyaml = "*"